# CHSU_data_structure_and_analysis

./: Cargo.toml
LABA1/: Cargo.toml
LABA1/src/: main.rs
LABA10/: Кейс 10_Методы кластеризации.ipynb
LABA11/: LABA11.ipynb
LABA12/: PCA_Iris.ipynb
LABA2/: Cargo.toml
LABA2/src/: main.rs
LABA21/: NLP_Лабораторная_работа_1_Text2Speech_c_использованием_Tacotron2.ipynb
LABA22/: NLP_Лабораторная_работа_2_Ответы_на_вопросы_с_помощью_HuggingFace.ipynb
LABA23/: RecSys.ipynb
LABA3/: Cargo.toml
LABA3/src/: main.rs
LABA4/: Cargo.toml
LABA4/src/: main.rs
LABA5/: Cargo.toml
LABA5/src/: main.rs
LABA6/: Music_of_big_cities.ipynb  music_project.csv
LABA7/: data_research_visualization.ipynb
LABA8/: LABA8.ipynb
LABA9/: LABA9.ipynb
src/: main.rs
