[package]
name = "LABA2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
itertools = "0.13.0"
async-trait = "0.1.82"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.7", features = ["json"] }
thousands = "0.2.0"